# cb-skill-learning

./: .gitignore  README.md
ai-agents/reflection-pattern/: main.py
ai_agents/: README.md
ai_agents/reflection-pattern/: chat_history.py  completion.py  fixed_first_chat_history.py  main.py  reflection_agent.py
ai_agents/reflection_pattern/: logger.py  pyproject.toml
cb-langchain/Docs/: langchain.md
cb-langchain/it-support-analyst/: main.py
cb-langchain/research-paper-analyst/: main.py  pyproject.toml  research_abstract.txt  system_prompt.txt
cb-langchain/review-analyst/: main.py  pyproject.toml  reviews.py
cb-langchain/simple-agent/: Readme.md  example-chain.py
cb-langchain/social-media-marketing-analyst/: main.py  pyproject.toml
cb_langchain/docs/: langchain.md
cb_langchain/it-support-analyst/: pyproject.toml
cb_langchain/research-paper-analyst/: main.py  pyproject.toml
cb_langchain/review-analyst/: prompt.txt
cb_langchain/simple-agent/: main.py  pyproject.toml
cb_langchain/social-media-marketing-analyst/: product_description.txt  product_factsheet.txt
rag-search-engine/: README.md  pyproject.toml
rag-search-engine/cli/: augmented_generation_cli.py  describe_image_cli.py  evaluation_cli.py  hybrid_search_cli.py  inverted_index.py  keyword_search_cli.py  multimodal_search_cli.py  semantic_search_cli.py  test_gemini.py
rag-search-engine/cli/lib/: chunked_semantic_search.py  hybrid_search.py  multimodal_search.py  semantic_search.py
web-crawler/: README.md  async_crawler.py  crawl.py  json_report.py  main.py  report.json  test_crawl.py
