[project]
name = "rag-search-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "google-genai>=2.8.0",
    "nltk==3.9.1",
    "numpy==2.3.3",
    "pillow>=12.2.0",
    "sentence-transformers>=5.5.1",
]
